--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,182 +1,55 @@
-/* global styles */
-body{
-	font-family:Arial, Helvetica, sans-serif;
+html{
+	background:url('../images/mainGradient.png');
+	background-repeat:repeat-x;
 }
-#header{
-	width:1000px;
-	height:100px;
-	border: 2px solid black;
-	margin: 0 auto;
-}
-#pageTitle{
-	float:left;
-	font-size:52px;
-	padding-top:18px;
-	padding-left:10px;
-}
-#headerUser{
-	float:right;
-	text-align:right;
-	padding-top:30px;
-	padding-right:3px;
-}
-#navigation{
-	width:700px;
-	height:75px;
-	border: 2px solid black;
-	margin: 0 auto;
-}
-
-.navLink {
-	text-decoration:none;
-	color:blue;
-	font-size:28px;
-}
-#navLinkContainer{	
+body{	
+	text-align:center;
+	padding-top:12px;
 	margin:0 auto;
-	width:650px;
-	height:40px;
-	margin-top:20px;
+
 }
-#navLinkContainer ul{
-	list-style: none;
-}
-#navLinkContainer li{
-	float:left;
-	padding-left:50px;
+.mainBoard{
+	margin: 0 auto;	
+	background:url('../images/bgMiddle.png');	
+	width:920px;
+	height:800px;	
 }
 .content{
-	position: absolute;
-	border:2px solid yellow;
-	left:212px;
-	width:1000px;
-	height:700px;
-	text-align:center;
-	
-}
-.leftNav{
-	float:left;
-	border: 1px solid red;
-	height:700px;
-	width:198px;
-	position:absolute;
-}
-.rightNav{
-	float:right;
-	border: 1px solid blue;
-	height:700px;
-	width:198px;
-	
-}
-#loginContainer{
+	width:880px;
+	position:relative;	
 	margin:0 auto;
+	height:590px;
+}
+.header{
+	position:relative;
+	border:1px solid black;	
+	width:880px;
+	height:150px;
+	margin:0 auto;
+}
+.logo{
+	position:relative;
+	border-left:1px solid black;
+	border-right:1px solid black;	
+	border-bottom:1px solid black;
 	width:300px;
-	height:200px;
-	border: 2px solid red;
-	width: 250px;
-    padding: 20px;
-    border: 1px solid #270644;
-    /*** Adding in CSS3 ***/
-    /*** Rounded Corners ***/
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    /*** Background Gradient - 2 declarations one for Firefox and one for Webkit ***/
-    background:  -moz-linear-gradient(19% 75% 90deg,#4E0085, #963AD6);
-    background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#4E0085));
- 
-/*
-    
-    -moz-box-shadow:0px -5px 100px #270644;
-    -webkit-box-shadow:0px -5px 100px #270644
-*/
+	height:110px;
+	margin:0 auto;	
 }
-#loginContainer label{
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:18px;
-	color:red;
-}
-#loginContainer input{
-	width: 230px;
-    background: #8a33c6;
-    padding: 6px;
-    margin-bottom: 10px;
-    border-top: 1px solid #ad64e0;
-    border-left: 0px;
-    border-right: 0px;
-    border-bottom: 0px;
-	color:white;
+.nav{
 	
-	/*** Transition Selectors - What properties to animate and how long ***/
-    -webkit-transition-property: -webkit-box-shadow, background;
-    -webkit-transition-duration: 0.25s;
-    /*** Adding a small shadow ***/
-    -moz-box-shadow: 0px 0px 2px #000;
-    -webkit-box-shadow: 0px 0px 2px #000;
+	background:url('../images/nav.png');	
+	width:880px;
+	height:60px;
+	margin:0 auto;	
 }
-
-#loginContainer input:hover {
-    -webkit-box-shadow: 0px 0px 4px #000;
-    background: #9d39e1;
-}
-
-.topLeft{
+.navLink{
+	position:relative;
+	width:176px;
+	height:40px;
+	padding-top:10px;
+	border:0px;
+	margin:0px;
 	float:left;
-	width:498px;
-	height:550px;
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
 }
 
-.topRight{
-	float:right;
-	margin:0 auto;
-	width:498px;
-	height:550px;	
-	font-family:Arial, Helvetica, sans-serif;
-	
-}
-
-.topRight label{
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:22px;
-	color:red;
-}
-.bottomLeft{
-	float:left;
-	width:498px;
-	height:350px	
-}
-.bottomRight{
-	float:right;
-	width:498px;
-	height:350px	
-}
-#artistOutput{
-	width:170px;
-	margin:0 auto;
-}
-.error {
-	width:150px;
-	position:relative; 
-    background-color: #ffc;
-    border: 1px solid #c00;
-	margin:0 auto;
-}
-label.error{
-	font-size:12px;
-}
-#genreOutput{
-	width:170px;
-	margin:0 auto;
-}
-#artistDetails{
-	padding:3px;
-}
-.artistImage{
-	float:left;	
-	border: 2px solid green;
-}
-.artistName{
-	font-size:48px;
-	padding:2px;
-}
