--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -20,39 +20,64 @@ body{
 	margin:0 auto;
 	height:590px;
 }
-.header{
+.headerLeft{
 	position:relative;
-	border:1px solid black;	
-	width:880px;
+	background:url('../images/logo2.png');
+	background-repeat:no-repeat;	
+	width:460px;
 	height:150px;
-	margin:0 auto;
+	margin-left:20px;
+	margin-bottom:15px;	
+	float:left;
 }
-.logo{
+.headerRight{
 	position:relative;
-	border-left:1px solid black;
-	border-right:1px solid black;	
-	border-bottom:1px solid black;
-	width:300px;
-	height:110px;
-	margin:0 auto;	
+	height:80px;
+	width:195px;
+	float:right;
+	margin-right:30px;
+	margin-top:30px;
 }
+.headerText{
+	width:370px;
+	height:50px;
+	position:relative;
+	float:right;
+	margin-bottom:12px;
+}
+
 .nav{
-	
-	background:url('../images/nav.png');	
-	width:880px;
-	height:60px;
-	margin:0 auto;	
+	clear:both;
+	background:url('../images/nav4.png');
+	background-repeat:no-repeat;	
+	width:878px;
+	height:50px;
+	margin:0 auto;
+	left:4px;
+	padding-left:2px;
+	padding-bottom:10px;	
 }
 .navLink{
-	position:relative;
-	
-	height:40px;
-	padding-top:10px;
+	position:relative;	
+	height:30px;
+	padding-top:5px;
 	border:0px;
 	margin:0px;
 	float:left;
 }
 .divider{
-	padding-top:10px;
+	padding-top:5px;
 	float:left;
+}
+.circle{
+	margin-bottom:7px;
+}
+.bar{
+	float:left;
+}
+#homeLeft{
+	float:left;
+	width:350px;
+	height:300px;
+	background:url('../images/greenBoard.png');
 }
