--- a/admin/resources/css/main.css
+++ b/admin/resources/css/main.css
@@ -1,7 +1,7 @@
 
 /* global styles */
 body{
-	background:#021C08;
+	
 	background-size:100%;
 	background-repeat:no-repeat;
 	font-family:"Lucida Grande";
@@ -130,18 +130,16 @@ html{
 }
 */
 .content{
-	background-image:url(../images/content.png);
+	
 	background-repeat:no-repeat;
 	position: absolute;
 	top:243px;
 	left:261px;
-	width:80%;	
+	width:75%;	
 	height:100%;
 	text-align:center;
 	padding-right:2%;
-	
-	
-	
+	border:1px solid green;	
 }
 /* left navigation */
 .leftNav{
@@ -347,4 +345,23 @@ background:#dcddc0;
 }
 #addAccountForm{
 	display:none;
+}
+#quoteListTable{
+	border: 2px solid green;
+	height:400px;
+	width:500px;
+	text-align:center;
+	overflow:scroll;
+	float:left;	
+}
+#addQuote{
+	float:right;
+	text-align:center;
+	width:500px;
+	height:400px;
+}
+#addAdmitQuoteForm{
+	width:400px;
+	height:400px;
+	border: 1px solid green;
 }
