--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,5 +1,5 @@
 html{
-	background:url('../images/mainGradient.png');
+	background:url('/resources/images/mainGradient.png');
 	background-repeat:repeat-x;
 }
 body{	
@@ -10,7 +10,7 @@ body{
 }
 .mainBoard{
 	margin: 0 auto;	
-	background:url('../images/bgMiddle.png');	
+	background:url('/resources/images/bgMiddle.png');	
 	width:920px;
 	height:800px;	
 }
@@ -22,7 +22,7 @@ body{
 }
 .headerLeft{
 	position:relative;
-	background:url('../images/logo2.png');
+	background:url('/resources/images/logo2.png');
 	background-repeat:no-repeat;	
 	width:460px;
 	height:150px;
@@ -48,14 +48,14 @@ body{
 
 .nav{
 	clear:both;
-	background:url('../images/nav4.png');
+	background:url('/resources/images/nav4.png');
 	background-repeat:no-repeat;	
 	width:878px;
 	height:50px;
 	margin:0 auto;
 	left:4px;
 	padding-left:2px;
-	padding-bottom:10px;	
+	padding-bottom:5px;	
 }
 .navLink{
 	position:relative;	
@@ -75,9 +75,49 @@ body{
 .bar{
 	float:left;
 }
-#homeLeft{
+#homeContainer{
 	float:left;
-	width:350px;
-	height:300px;
-	background:url('../images/greenBoard.png');
+	width:874px;
+	height:200px;
+	border: 1px solid green;
+	font-size:22px;
+	margin-left:2px;
+}
+#quoteLeft{
+	width:380px;
+	height:400px;
+	float:left;
+	margin-left:5px;
+}
+#quoteRight{
+	width:450px;	
+	float:right;
+	text-align:left;
+}
+/* quote form */
+#quoteFormTable{
+	font-family:"Minion";
+}
+#quoteFormTable th{
+	text-align:left;
+}
+ #quoteAge{
+ 	width:38px;
+ }
+#quoteVarsLeft{
+	float:left;
+}
+#quoteVarsRight{
+	float:right;
+}
+#quoteVarsBottom{
+	clear:both;
+}
+.quoteValues{
+	color:green;
+	font-size:20px;
+}
+.companyName{
+	color:blue;
+	font-size:18px;
 }
